--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@jamashita/steckdose-digest": "1.1.0",
     "@jamashita/steckdose-json": "1.1.0",
     "@material-ui/core": "4.11.4",
+    "@nestjs/common": "7.6.15",
+    "@nestjs/core": "7.6.15",
+    "@nestjs/platform-fastify": "7.6.15",
     "bourbon-neat": "4.0.0",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
@@ -54,6 +57,7 @@
     "express": "4.17.1",
     "express-session": "1.17.1",
     "fastify": "3.15.1",
+    "fastify-secure-session": "2.3.1",
     "handsontable": "8.3.2",
     "helmet": "4.6.0",
     "history": "5.0.0",
@@ -75,7 +79,6 @@
     "redux-logger": "3.0.6",
     "redux-observable": "1.2.0",
     "reflect-metadata": "0.1.13",
-    "routing-controllers": "0.9.0",
     "rxjs": "7.0.0",
     "serve-favicon": "2.5.0"
   },
@@ -91,11 +94,11 @@
     "@types/helmet": "4.0.0",
     "@types/history": "4.7.8",
     "@types/jest": "26.0.23",
-    "@types/node": "15.0.1",
+    "@types/node": "15.0.2",
     "@types/passport": "1.0.6",
     "@types/passport-local": "1.0.33",
     "@types/pino": "6.3.8",
-    "@types/react": "17.0.4",
+    "@types/react": "17.0.5",
     "@types/react-dom": "17.0.3",
     "@types/react-redux": "7.1.16",
     "@types/react-router-dom": "5.1.7",
@@ -105,28 +108,28 @@
     "@types/sinon": "10.0.0",
     "@types/supertest": "2.0.11",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
-    "@typescript-eslint/typescript-estree": "4.22.0",
-    "concurrently": "6.0.2",
-    "eslint": "7.25.0",
+    "@typescript-eslint/eslint-plugin": "4.22.1",
+    "@typescript-eslint/parser": "4.22.1",
+    "@typescript-eslint/typescript-estree": "4.22.1",
+    "concurrently": "6.1.0",
+    "eslint": "7.26.0",
     "font-config-webpack-plugin": "2.0.2",
     "git-cz": "4.7.6",
     "husky": "6.0.0",
     "jest": "26.6.3",
-    "lint-staged": "10.5.4",
-    "npm-check-updates": "11.5.9",
+    "lint-staged": "11.0.0",
+    "npm-check-updates": "11.5.10",
     "rimraf": "3.0.2",
     "scss-config-webpack-plugin": "2.0.2",
     "sinon": "10.0.0",
-    "sort-package-json": "1.49.0",
+    "sort-package-json": "1.50.0",
     "supertest": "6.1.3",
     "ts-config-webpack-plugin": "2.0.2",
-    "ts-jest": "26.5.5",
+    "ts-jest": "26.5.6",
     "ts-node-dev": "1.1.6",
     "typescript": "4.2.4",
     "webpack": "5.36.2",
-    "webpack-cli": "4.6.0",
+    "webpack-cli": "4.7.0",
     "webpack-dev-server": "3.11.2",
     "webpack-stream": "6.1.2"
   },
