--- a/config/test.yml
+++ b/config/test.yml
@@ -3,6 +3,9 @@ session:
   cookieName: 'VEAU'
   secret: ''
   salt: ''
+  cookie:
+    path: '/'
+    httpOnly: true
 redis:
   host: 'veau_redis'
   port: 6379
