--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "fastify-compress": "3.4.2",
     "fastify-helmet": "5.3.1",
     "fastify-secure-session": "2.3.1",
+    "fastify-static": "4.0.1",
     "handsontable": "8.3.2",
     "helmet": "4.6.0",
     "history": "5.0.0",
@@ -68,6 +69,7 @@
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "pm2": "4.5.6",
+    "point-of-view": "4.14.0",
     "pug": "3.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
