--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "@jamashita/veau",
   "version": "1.6.3",
   "private": true,
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:jamashita/veau.git"
   },
   "license": "MIT",
   "author": "jamashita <jamashita@arachnid.xyz>",
+  "type": "module",
   "scripts": {
     "build": "yarn clean && concurrently 'npm:build:*'",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "webpack",
+    "build:f": "tsc -b tsconfig.compile.json",
+    "build:b": "webpack",
     "clean": "rimraf dist && rimraf coverage",
     "commit": "git cz",
     "format": "eslint --fix 'src/**/*.{ts,tsx}'",
@@ -20,115 +22,78 @@
     "test": "jest test",
     "update": "yarn update:upgrade && yarn update:install",
     "update:install": "yarn install && yarn upgrade && yarn audit fix --force",
-    "update:upgrade": "ncu --packageManager yarn --upgrade",
+    "update:upgrade": "ncu --packageManager yarn --upgrade --timeout 600000",
     "watch": "concurrently 'npm:watch:*'",
     "watch:server": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/Server/Server.ts",
     "watch:webpack": "webpack-dev-server --hot --config webpack.development.config.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-solid-svg-icons": "5.15.3",
-    "@handsontable/react": "8.4.0",
-    "@jamashita/anden-error": "1.8.0",
-    "@jamashita/anden-object": "1.8.0",
-    "@jamashita/anden-type": "1.10.1",
-    "@jamashita/anden-uuid": "1.8.0",
-    "@jamashita/anden-zeit": "1.8.0",
-    "@jamashita/catacombe-datasource": "1.1.0",
-    "@jamashita/catacombe-fetch": "1.4.0",
-    "@jamashita/catacombe-heap": "1.3.0",
-    "@jamashita/catacombe-mysql": "1.3.0",
-    "@jamashita/catacombe-redis": "1.3.0",
-    "@jamashita/genitore": "1.4.0",
-    "@jamashita/lluvia-collection": "1.6.0",
-    "@jamashita/steckdose-digest": "1.1.0",
-    "@jamashita/steckdose-json": "1.1.0",
-    "@material-ui/core": "4.11.4",
-    "@nestjs/common": "7.6.15",
-    "@nestjs/core": "7.6.15",
-    "@nestjs/passport": "7.1.5",
-    "@nestjs/platform-express": "7.6.15",
-    "bourbon-neat": "4.0.0",
+    "@jamashita/anden-error": "2.0.0",
+    "@jamashita/anden-object": "2.0.0",
+    "@jamashita/anden-type": "2.0.0",
+    "@jamashita/anden-uuid": "2.0.0",
+    "@jamashita/anden-zeit": "2.0.0",
+    "@jamashita/catacombe-datasource": "2.0.0",
+    "@jamashita/catacombe-fetch": "2.0.0",
+    "@jamashita/catacombe-heap": "2.0.0",
+    "@jamashita/catacombe-mysql": "2.0.0",
+    "@jamashita/catacombe-redis": "2.0.0",
+    "@jamashita/lluvia-collection": "2.1.0",
+    "@jamashita/lluvia-project": "2.2.0",
+    "@jamashita/lluvia-sequence": "2.2.0",
+    "@jamashita/steckdose-digest": "2.0.0",
+    "@jamashita/steckdose-json": "2.1.0",
     "class-validator": "0.13.1",
     "compression": "1.7.4",
     "config": "3.3.6",
-    "connect-redis": "5.2.0",
-    "connected-react-router": "6.9.1",
-    "express-session": "1.17.1",
-    "handsontable": "8.4.0",
+    "connect-redis": "6.0.0",
+    "express": "4.17.1",
+    "express-session": "1.17.2",
     "helmet": "4.6.0",
-    "history": "5.0.0",
     "http-status-codes": "2.1.4",
     "inversify": "5.1.1",
     "js-yaml": "4.1.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
-    "pm2": "4.5.6",
-    "point-of-view": "4.14.0",
+    "pm2": "5.1.0",
     "pug": "3.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-intl": "5.17.5",
-    "react-redux": "7.2.4",
-    "react-router-dom": "5.2.0",
-    "recharts": "2.0.9",
-    "redux": "4.1.0",
-    "redux-logger": "3.0.6",
-    "redux-observable": "1.2.0",
-    "reflect-metadata": "0.1.13",
-    "rxjs": "7.0.0",
     "serve-favicon": "2.5.0",
     "tslog": "3.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "12.1.1",
-    "@commitlint/config-conventional": "12.1.1",
-    "@jamashita/eslint-plugin": "1.42.0",
-    "@types/compression": "1.7.0",
-    "@types/config": "0.0.38",
-    "@types/connect-redis": "0.0.16",
-    "@types/express": "4.17.11",
-    "@types/express-session": "1.17.3",
+    "@commitlint/cli": "13.1.0",
+    "@commitlint/config-conventional": "13.1.0",
+    "@jamashita/eslint-plugin": "1.48.0",
+    "@types/compression": "1.7.1",
+    "@types/config": "0.0.39",
+    "@types/connect-redis": "0.0.17",
+    "@types/express": "4.17.13",
+    "@types/express-session": "1.17.4",
     "@types/helmet": "4.0.0",
-    "@types/history": "4.7.8",
-    "@types/jest": "26.0.23",
-    "@types/node": "15.0.2",
-    "@types/passport": "1.0.6",
-    "@types/passport-local": "1.0.33",
-    "@types/react": "17.0.5",
-    "@types/react-dom": "17.0.4",
-    "@types/react-redux": "7.1.16",
-    "@types/react-router-dom": "5.1.7",
-    "@types/recharts": "1.8.19",
-    "@types/redux-logger": "3.0.8",
-    "@types/serve-favicon": "2.5.2",
-    "@types/sinon": "10.0.0",
+    "@types/jest": "26.0.24",
+    "@types/node": "16.4.10",
+    "@types/passport": "1.0.7",
+    "@types/passport-local": "1.0.34",
+    "@types/serve-favicon": "2.5.3",
+    "@types/sinon": "10.0.2",
     "@types/supertest": "2.0.11",
-    "@types/webpack": "5.28.0",
-    "concurrently": "6.1.0",
-    "eslint": "7.26.0",
-    "font-config-webpack-plugin": "2.0.2",
+    "concurrently": "6.2.0",
+    "eslint": "7.32.0",
     "git-cz": "4.7.6",
-    "husky": "6.0.0",
-    "jest": "26.6.3",
-    "lint-staged": "11.0.0",
-    "npm-check-updates": "11.5.11",
+    "husky": "7.0.1",
+    "jest": "27.0.6",
+    "lint-staged": "11.1.1",
+    "npm-check-updates": "11.8.3",
     "rimraf": "3.0.2",
-    "scss-config-webpack-plugin": "2.0.2",
-    "sinon": "10.0.0",
+    "sinon": "11.1.2",
     "sort-package-json": "1.50.0",
-    "supertest": "6.1.3",
-    "ts-config-webpack-plugin": "2.0.2",
-    "ts-jest": "26.5.6",
-    "ts-node-dev": "1.1.6",
-    "typescript": "4.2.4",
-    "webpack": "5.37.0",
-    "webpack-cli": "4.7.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-stream": "6.1.2"
+    "supertest": "6.1.4",
+    "ts-jest": "27.0.4",
+    "ts-node-dev": "1.1.8",
+    "typescript": "4.3.5"
   },
   "engines": {
-    "node": ">= 15.0.0",
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
     "npm": "npm is not supported"
   },
   "engineStrict": true
