--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "typescript": "4.5.4"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0",
+    "node": ">=14.0.0",
     "npm": "npm is not supported"
   },
   "engineStrict": true
