--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@jamashita/catacombe-mysql": "2.11.0",
     "@jamashita/catacombe-redis": "2.11.0",
     "@jamashita/genitore-schrodinger": "2.9.0",
-    "@jamashita/genitore-superposition": "2.8.0",
     "@jamashita/lluvia-collection": "2.11.0",
     "@jamashita/lluvia-project": "2.11.0",
     "@jamashita/lluvia-sequence": "2.11.0",
@@ -50,38 +49,23 @@
     "bourbon-neat": "4.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
-    "compression": "1.7.4",
     "config": "3.3.7",
-    "connect-redis": "6.1.3",
-    "express": "4.17.3",
-    "express-session": "1.17.2",
     "handsontable": "11.1.0",
-    "helmet": "5.0.2",
     "history": "5.3.0",
     "http-status-codes": "2.2.0",
     "inversify": "6.0.1",
-    "js-yaml": "4.1.0",
     "passport": "0.5.2",
     "passport-local": "1.0.0",
     "pm2": "5.2.0",
     "pug": "3.0.2",
     "reflect-metadata": "0.1.13",
-    "routing-controllers": "0.9.0",
-    "serve-favicon": "2.5.0",
     "tslog": "3.3.3"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "7.17.9",
-    "@babel/preset-env": "7.16.11",
     "@commitlint/cli": "16.2.3",
     "@commitlint/config-conventional": "16.2.1",
     "@jamashita/eslint-plugin": "1.64.0",
-    "@types/compression": "1.7.2",
     "@types/config": "0.0.41",
-    "@types/connect-redis": "0.0.18",
-    "@types/express": "4.17.13",
-    "@types/express-session": "1.17.4",
-    "@types/helmet": "4.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.24",
     "@types/passport": "1.0.7",
@@ -91,31 +75,14 @@
     "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "5.3.3",
     "@types/recharts": "1.8.23",
-    "@types/redux-logger": "3.0.9",
-    "@types/serve-favicon": "2.5.3",
-    "@types/sinon": "10.0.11",
-    "@types/supertest": "2.0.12",
-    "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "5.19.0",
-    "@typescript-eslint/parser": "5.19.0",
-    "@typescript-eslint/typescript-estree": "5.19.0",
-    "babel-jest": "27.5.1",
     "concurrently": "7.1.0",
     "eslint": "8.13.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "26.1.4",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.4.0",
-    "font-config-webpack-plugin": "2.0.3",
     "git-cz": "4.8.0",
     "husky": "7.0.4",
     "jest": "27.5.1",
     "lint-staged": "12.3.8",
     "npm-check-updates": "12.5.9",
     "rimraf": "3.0.2",
-    "sinon": "13.0.2",
     "sort-package-json": "1.55.0",
     "supertest": "6.2.2",
     "ts-jest": "27.1.4",
@@ -123,8 +90,7 @@
     "typescript": "4.6.3"
   },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": "npm is not supported"
+    "node": ">=14.0.0"
   },
   "engineStrict": true
 }
